offer app, offer add & edit -admin

--- a/kinomart/user/templates/user/theme.html
+++ b/kinomart/user/templates/user/theme.html
@@ -125,7 +125,17 @@
             </div>
         </div>
         <!-- Modal Search End -->
-
+        <style>
+            .list-group-item:hover {
+    background-color: #46833a; /* Change this to your preferred background color */
+    color: #f4f6fa; /* Change this to your preferred text color */
+    box-shadow: 0 0 10px rgb(56, 49, 49);
+    margin-bottom: 8px;
+}
+.list-group-item{
+    text-align: center;
+}
+        </style>
 
 
         
