--- a/kinomart/user/templates/user/user_address.html
+++ b/kinomart/user/templates/user/user_address.html
@@ -29,16 +29,16 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
-        <div class="col-md-3 bg-light">
-            <h3>Hello {{user.first_name}}</h3>
+        <div class="col-md-2 bg-light p-4 ms-4 rounded shadow" style="height: 60vh;">
+          <h4>Hello {{user.first_name}}</h4>
             <ul class="list-group">
-                <li class="list-group-item"><a href="{% url 'user_page' %}">Profile</a></li>
-                <li class="list-group-item"><a href="{% url 'user_address' %}">Shopping Address</a></li>
-                <li class="list-group-item"><a href="{% url 'order_history' %}">Order History</a></li>
-                <li class="list-group-item"><a href="{% url 'wishlist' %}">My Wishlist</a></li>
-                <li class="list-group-item"><a href="{% url 'cart' %}">My Cart</a></li>
-                <li class="list-group-item"><a href="{% url 'wallet' %}">Wallet</a></li>
-                <li class="list-group-item"><a href="{% url 'logout_user' %}">Log Out</a></li>
+              <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4">Profile</li></a>
+              <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4">Shopping Address</li></a>
+              <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
+              <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
+              <a href="{% url 'cart' %}"><li class="list-group-item rounded-4">My Cart</li></a>
+              <a href="{% url 'wallet' %}"><li class="list-group-item rounded-4">Wallet</li></a>
+              <a href="{% url 'logout_user' %}"><li class="list-group-item rounded-4">Log Out</li></a>
             </ul>
         </div>
         <!-- Main Content -->
