--- a/kinomart/admin/templates/admin/admin_theme.html
+++ b/kinomart/admin/templates/admin/admin_theme.html
@@ -97,6 +97,11 @@
                                 </div>
                                 Coupon
                             </a>
+                            <a class="nav-link" href="{% url 'offer' %}">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-tags"></i></i>
+                                </div>
+                                Offers
+                            </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
