--- a/kinomart/user/templates/user/order_history.html
+++ b/kinomart/user/templates/user/order_history.html
@@ -11,22 +11,30 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
-        <div class="col-md-3 bg-light">
-            <h3>Hello {{user.first_name}}</h3>
-            <ul class="list-group">
-                <li class="list-group-item"><a href="{% url 'user_page' %}">Profile</a></li>
-                <li class="list-group-item"><a href="{% url 'user_address' %}">Shopping Address</a></li>
-                <li class="list-group-item"><a href="{% url 'order_history' %}">Order History</a></li>
-                <li class="list-group-item"><a href="{% url 'wishlist' %}">My Wishlist</a></li>
-                <li class="list-group-item"><a href="{% url 'cart' %}">My Cart</a></li>
-                <li class="list-group-item"><a href="{% url 'wallet' %}">Wallet</a></li>
-                <li class="list-group-item"><a href="{% url 'logout_user' %}">Log Out</a></li>
-            </ul>
-        </div>
+        <div class="col-md-2 bg-light p-4 ms-4 rounded shadow" style="height: 60vh;">
+            <h4>Hello {{user.first_name}}</h4>
+              <ul class="list-group">
+                <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4">Profile</li></a>
+                <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4">Shopping Address</li></a>
+                <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
+                <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
+                <a href="{% url 'cart' %}"><li class="list-group-item rounded-4">My Cart</li></a>
+                <a href="{% url 'wallet' %}"><li class="list-group-item rounded-4">Wallet</li></a>
+                <a href="{% url 'logout_user' %}"><li class="list-group-item rounded-4">Log Out</li></a>
+              </ul>
+          </div>
         <!-- Main Content -->
         <div class="col-md-9">
 
-
+            {% if messages %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {% for message in messages %}
+                   {{message}}
+        
+                {% endfor %}
+               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+             </div>
+             {% endif %}
 
             <h3 style="color: rgb(18, 146, 16);">Order history page</h3>
             <hr>
