--- a/kinomart/user/templates/user/index.html
+++ b/kinomart/user/templates/user/index.html
@@ -151,13 +151,22 @@
                                                 </div>
                                                 {% if product.is_offer %}
 
-                                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Offer</div>
+                                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">{{product.offer}}</div>
                                                 {% endif %}
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom" style="height: 250px;">
                                                     <h4>{{product.product_name}}</h4>
                                                     <p>{{product.description}}</p>
                                                     <div class="d-flex justify-content-between flex-lg-wrap">
-                                                        <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}{{product.unit}}</p>
+                                                {% if product.is_offer %}
+                                                <p class="text-dark fs-5 fw-bold mb-0"><strike style="font-size: small; color: brown;">₹{{product.price}}</strike> ₹{{product.offer_price}}/ {{product.quantity}}{{product.unit}}</p>
+
+
+                                                {% else %}
+                                                <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}{{product.unit}}</p>
+
+
+                                                {% endif %}
+
                                                         <a href="" data-product-id="{{product.product_id}}" data-variant-id="{{product.variant_id}}" class="btn border border-secondary rounded-pill px-3 text-primary add-to-cart"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                                         
                                                     </div>
