view product with offer done

--- a/kinomart/admin/templates/admin/admin_theme.html
+++ b/kinomart/admin/templates/admin/admin_theme.html
@@ -98,7 +98,7 @@
                                 Coupon
                             </a>
                             <a class="nav-link" href="{% url 'offer' %}">
-                                <div class="sb-nav-link-icon"><i class="fa-solid fa-tags"></i></i>
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-tags"></i>
                                 </div>
                                 Offers
                             </a>
