--- a/kinomart/user/templates/user/view_product.html
+++ b/kinomart/user/templates/user/view_product.html
@@ -69,6 +69,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-6">
+                                <h6 class="fw-bold mb-3 text-primary"><i class="fa-solid fa-tags"></i>{{product.offer}}</h6>
+
                                 <h4 class="fw-bold mb-3">{{product.product_name}}</h4>
                                 <p class="mb-3">Category: {{product.sub_category}}</p>
                                 
@@ -85,7 +87,16 @@
     </ul>
     <div class="tab-content" id="pills-tabContent">
     {% for varient in varient_data %}
-      <div class="tab-pane fade show {% if forloop.first %}active{% endif %}" id="varient-{{varient.id}}" role="tabpanel" aria-labelledby="pills-varient-{{varient.id}}-tab"><h5 class="fw-bold mb-3">₹{{varient.price}}</h5></div>
+      <div class="tab-pane fade show {% if forloop.first %}active{% endif %}" id="varient-{{varient.id}}" role="tabpanel" aria-labelledby="pills-varient-{{varient.id}}-tab">
+        
+        {% if varient.is_offer %}
+        <h5 class="fw-bold mb-3"><strike style="font-size: small; color: brown;">₹{{varient.price}}</strike>₹{{varient.offer_price}}</h5>
+
+        {% else %}
+        <h5 class="fw-bold mb-3">₹{{varient.price}}</h5>
+
+        {% endif %}
+    </div>
     {% endfor %}
     </div>
     
