--- a/kinomart/admin/templates/admin/edit_categories.html
+++ b/kinomart/admin/templates/admin/edit_categories.html
@@ -17,6 +17,7 @@
             {% csrf_token %}
             <div style="display: flex; justify-content: space-between; width: 400px;">
                 <input type="text" name="category_name"  class="form-control" placeholder="Enter new category" required>
+                <input type="checkbox">
                 <input type="submit" value="Add" class="btn btn-secondary">
             </div>
           </form>
