--- a/kinomart/user/templates/user/index.html
+++ b/kinomart/user/templates/user/index.html
@@ -163,11 +163,11 @@
                                                         <p>{{product.description}}</p>
                                                         <div class="d-flex justify-content-between flex-lg-wrap">
                                                     {% if product.is_offer %}
-                                                    <p class="text-dark fs-5 fw-bold mb-0"><strike style="font-size: small; color: brown;">₹{{product.price}}</strike> ₹{{product.offer_price}}/ {{product.quantity}}{{product.unit}}</p>
+                                                    <p class="text-dark fs-5 fw-bold mb-0"><strike style="font-size: small; color: brown;">₹{{product.price}}</strike> ₹{{product.offer_price}}/ {{product.quantity}}<span style="font-size: medium; color: rgb(61, 25, 25);">{{product.unit}}</span></p>
     
     
                                                     {% else %}
-                                                    <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}{{product.unit}}</p>
+                                                    <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}<span style="font-size: medium; color: rgb(61, 25, 25);">{{product.unit}}</span></p>
     
     
                                                     {% endif %}
@@ -217,7 +217,7 @@
                 <h4>{{product.product_name}}</h4>
                 <p>{{product.description}}</p>
                 <div class="mt-auto text-center">
-                    <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}{{product.unit}}</p>
+                    <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}<span style="font-size: medium; color: rgb(61, 25, 25);">{{product.unit}}</span></p>
                     <a href="" data-product-id="{{product.product_id}}" data-variant-id="{{product.variant_id}}" class="btn border border-secondary rounded-pill px-3 text-primary add-to-cart"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                 </div>
             </div>
