made some changes. Now working on sales report

--- a/kinomart/user/templates/user/cart.html
+++ b/kinomart/user/templates/user/cart.html
@@ -75,7 +75,7 @@
                       </div>
                       
                       </td>
-                    <td id="item_total{{item.id}}">₹{{item.price}}ff</td>
+                    <td id="item_total{{item.id}}">₹{{item.price}}</td>
                   </tr>
                   {% endfor %}
                   
