made some changes. Now working on sales report

--- a/kinomart/admin/templates/admin/index_admin.html
+++ b/kinomart/admin/templates/admin/index_admin.html
@@ -46,6 +46,11 @@
                                 </div>
                             </div>
                         </div>
+
+<div class="row">
+    <a href="{% url 'sales_report' %}">sales_report</a>
+</div>
+
                         <div class="row">
                             <div class="col-xl-6">
                                 <div class="card mb-4">
