--- a/kinomart/admin/templates/admin/sales_report_page.html
+++ b/kinomart/admin/templates/admin/sales_report_page.html
@@ -14,9 +14,9 @@
             <button class="btn btn-outline-secondary btn-sm rounded-pill " id="custom-date" >Custom date</button>
             <form action="" id="date-form" style="display: none;">
                 <label for="from">From</label>
-                <input type="date">
+                <input type="date" name="from" id="from">
                 <label for="">To</label>
-                <input type="date">
+                <input type="date" name="to" id="to">
                 <input type="submit" value="Genarate">
             </form>
 
@@ -140,7 +140,32 @@ $.ajax({
 
 })
 
+$("#date-form").submit(function(event){
+        // Prevent the form from submitting via the browser.
+        event.preventDefault();
 
+        var fromDate = $('#from').val();
+        var toDate = $('#to').val();
+
+        $.ajax({
+            url: '{% url "sales_report_custom" %}', // the URL where you want to post data
+            type: 'POST', // can be 'GET' or 'POST'
+            data: {
+                'from_date': fromDate, // the from date
+                'to_date': toDate // the to date
+            },
+            success: function(response) {
+                // this function will be executed if the request succeeds
+                // 'response' is the data returned from the server
+                // you can use it to change your HTML content
+                $('#result').html(response);
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+                // this function will be executed if the request fails
+                console.log(textStatus, errorThrown);
+            }
+        });
+    });
 
 
 
